# libamz

./: CMakeLists.txt
src/: amz.cpp  amz.h  amzPrivate.h
